# otomotoskraper

./: .gitignore  README.md  config.yaml  pyproject.toml
docs/superpowers/plans/: 2026-04-14-otomoto-scraper.md
docs/superpowers/specs/: 2026-04-14-otomoto-scraper-design.md
src/otomotoskrap/: __init__.py  __main__.py  cli.py  client.py  config.py  models.py  parser.py  scraper.py  storage.py
tests/: conftest.py  test_cli.py  test_client.py  test_config.py  test_models.py  test_parser.py  test_scraper.py  test_storage.py
tests/fixtures/: search_page.html
